--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,14 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_start"
+        android:orderInCategory="100"
+        android:title="开启"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_sstop"
+        android:orderInCategory="100"
+        android:title="停止"
+        app:showAsAction="never" />
 </menu>
