--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,6 +7,16 @@
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
+        android:id="@+id/access"
+        android:orderInCategory="100"
+        android:title="@string/access_ser"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/help_settings"
+        android:orderInCategory="100"
+        android:title="辅助功能设置"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_start"
         android:orderInCategory="100"
         android:title="开启"
