--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -2,12 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@android:color/black"
+    android:background="@color/bs_blue_deep"
     android:layout_height="match_parent">
 
-    <VideoView
+    <com.bsyun.ido.utils.CustomVideoView
         android:id="@+id/videoview"
         android:layout_width="match_parent"
         android:layout_centerInParent="true"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 </RelativeLayout>
